Adjusted line spacings in sidebar, fix #95

--- a/exeapp/static/css/styles/bmz-responsive/sass/content.scss
+++ b/exeapp/static/css/styles/bmz-responsive/sass/content.scss
@@ -110,7 +110,9 @@ header {
           display: inline-block;
           padding-left: 20px;
           width: 100%;
-          line-height: 25px;
+          padding-top: 4px;
+          padding-bottom: 4px;
+          line-height: 18px;
           color: $grey;
           text-decoration: none;
           text-indent: -20px;
