--- a/exeapp/static/css/styles/tum2-responsive/sass/content.scss
+++ b/exeapp/static/css/styles/tum2-responsive/sass/content.scss
@@ -108,6 +108,9 @@ header {
         a {
           display: inline-block;
           padding-left: 20px;
+          padding-top: 4px;
+          padding-bottom: 4px;
+          line-height: 18px;
           width: 100%;
           color: $grey;
           text-decoration: none;
