--- a/exeapp/static/css/styles/tum2/sass/content.scss
+++ b/exeapp/static/css/styles/tum2/sass/content.scss
@@ -105,6 +105,9 @@ header {
           display: inline-block;
           padding-left: 20px;
           width: 100%;
+          padding-top: 4px;
+          padding-bottom: 4px;
+          line-height: 18px;
           color: $grey;
           text-decoration: none;
 
